Se hizo la subpagina de innov8 con su diseño unico

--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
             <span></span>
             Descubre IFM</a
           >
-          <a href="">
+          <a href="innov8.html">
             <span></span>
             <span></span>
             <span></span>
             <span></span>
             Explora Innov8</a
           >
-          <a href="">
+          <a href="olimpia.html">
             <span></span>
             <span></span>
             <span></span>
