--- a/innov8.html
+++ b/innov8.html
@@ -1,11 +1,166 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/innov8/normalize.css" />
+    <link rel="stylesheet" href="css/innov8/home.css" />
+    <link rel="stylesheet" href="css/innov8/info.css" />
+    <link rel="stylesheet" href="css/innov8/services.css" />
+    <link rel="stylesheet" href="css/innov8/footer.css" />
+    <link rel="stylesheet" href="css/innov8/general.css" />
+    <!-- <link rel="icon" href="archivos/logos_e_iconos/favicon.ico" /> -->
+    <title>Innov8</title>
+  </head>
+  <body>
+    <body>
+      <header>
+        <div class="static-image">
+            <img src="archivos/imagenes/campo.jpg" alt="">
+        </div>
+      </header>
+
+      <main>
+        <div id="cinta"></div>
+        <div id="contain-1">
+          <img src="archivos/imagenes/balon2.jpg" alt="image" />
+          <div class="contain-text">
+            <h1>INNOV8</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe,
+              provident laboriosam est sed deserunt voluptate vitae temporibus
+              vel mollitia? Dicta porro nemo veniam consequuntur eos asperiores
+              quam fugiat quod aliquam! Lorem ipsum dolor sit amet consectetur,
+              adipisicing elit. Saepe, provident laboriosam est sed deserunt
+              voluptate vitae temporibus vel mollitia? Dicta porro nemo veniam
+              consequuntur eos asperiores quam fugiat quod aliquam! Lorem ipsum
+              dolor sit amet consectetur, adipisicing elit. Saepe, provident
+              laboriosam est sed deserunt voluptate vitae temporibus vel
+              mollitia? Dicta porro nemo veniam consequuntur eos asperiores quam
+              fugiat quod aliquam! Lorem ipsum dolor sit amet consectetur,
+              adipisicing elit. Saepe, provident laboriosam est sed deserunt
+              voluptate vitae temporibus vel mollitia? Dicta porro nemo veniam
+              consequuntur eos asperiores quam fugiat quod aliquam!
+            </p>
+          </div>
+        </div>
+      </main>
+
+      <article>
+        <div class="contain">
+          <div class="info-contain">
+            <div class="icon-title">
+              <img src="archivos/svg/club.svg" alt="icon" />
+              <h1>Asesoría a Clubes</h1>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
+              reprehenderit pariatur, deserunt similique illum facilis, modi hic
+              eveniet doloremque, ratione quibusdam quia corrupti facere
+              consectetur obcaecati possimus. Id, minima molestias.
+            </p>
+          </div>
+          <div class="info-contain">
+            <div class="icon-title">
+              <img src="archivos/svg/player.svg" alt="icon" />
+              <h1>Promoción de Jugador</h1>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
+              reprehenderit pariatur, deserunt similique illum facilis, modi hic
+              eveniet doloremque, ratione quibusdam quia corrupti facere
+              consectetur obcaecati possimus. Id, minima molestias.
+            </p>
+          </div>
+          <div class="info-contain">
+            <div class="icon-title">
+              <img src="archivos/svg/help_24-7.svg" alt="icon" />
+              <h1>Apoyo 24/7</h1>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
+              reprehenderit pariatur, deserunt similique illum facilis, modi hic
+              eveniet doloremque, ratione quibusdam quia corrupti facere
+              consectetur obcaecati possimus. Id, minima molestias.
+            </p>
+          </div>
+        </div>
+        <div class="contain">
+          <div class="info-contain">
+            <div class="icon-title">
+              <img src="archivos/svg/marketing.svg" alt="icon" />
+              <h1>Marketing Deportivo</h1>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
+              reprehenderit pariatur, deserunt similique illum facilis, modi hic
+              eveniet doloremque, ratione quibusdam quia corrupti facere
+              consectetur obcaecati possimus. Id, minima molestias.
+            </p>
+          </div>
+          <div class="info-contain">
+            <div class="icon-title">
+              <img src="archivos/svg/scouting.svg" alt="icon" />
+              <h1>Scouting</h1>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
+              reprehenderit pariatur, deserunt similique illum facilis, modi hic
+              eveniet doloremque, ratione quibusdam quia corrupti facere
+              consectetur obcaecati possimus. Id, minima molestias.
+            </p>
+          </div>
+          <div class="info-contain">
+            <div class="icon-title">
+              <img src="archivos/svg/asistance_legal.svg" alt="icon" />
+              <h1>Asistencia Legal</h1>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
+              reprehenderit pariatur, deserunt similique illum facilis, modi hic
+              eveniet doloremque, ratione quibusdam quia corrupti facere
+              consectetur obcaecati possimus. Id, minima molestias.
+            </p>
+          </div>
+        </div>
+        <div class="contain">
+          <div class="info-contain">
+            <div class="icon-title">
+              <img src="archivos/svg/search_business.svg" alt="icon" />
+              <h1>Busqueda y Negociacion</h1>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
+              reprehenderit pariatur, deserunt similique illum facilis, modi hic
+              eveniet doloremque, ratione quibusdam quia corrupti facere
+              consectetur obcaecati possimus. Id, minima molestias.
+            </p>
+          </div>
+        </div>
+      </article>
+
+      <footer>
+        <div class="contain">
+          <p>Innovative Football Management</p>
+          <p>Direccion: CLL 12A #34-56</p>
+          <p>Correo: Example@email.com</p>
+        </div>
+        <div class="contain">
+          &copy; Innovative Football Management. All rights reserved.
+          <p>legal informacion</p>
+        </div>
+        <div id="redes">
+          <a href="instagram.com"
+            ><img src="archivos/logos_e_iconos/instagram.png" alt="Instagram"
+          /></a>
+          <a href="facebook.com"
+            ><img src="archivos/logos_e_iconos/facebook.png" alt="Facebook"
+          /></a>
+          <a href="whatsapp.com"
+            ><img src="archivos/logos_e_iconos/whatsapp.png" alt="Whatsapp"
+          /></a>
+        </div>
+      </footer>
+    </body>
+  </body>
 </html>
