Se añadieron diseños para la pagina Innvo8

--- a/innov8.html
+++ b/innov8.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/innov8/services.css" />
     <link rel="stylesheet" href="css/innov8/footer.css" />
     <link rel="stylesheet" href="css/innov8/general.css" />
+    <link rel="stylesheet" href="css/innov8/section.css">
     <!-- <link rel="icon" href="archivos/logos_e_iconos/favicon.ico" /> -->
     <title>Innov8</title>
   </head>
@@ -16,14 +17,17 @@
     <body>
       <header>
         <div class="static-image">
-            <img src="archivos/imagenes/campo.jpg" alt="">
+            <img src="archivos/imagenes/marketing1.jpg" alt="">
         </div>
+        <img src="archivos/logos_e_iconos/logoExample.png" alt="logoExample" id="logoExample">
       </header>
 
-      <main>
-        <div id="cinta"></div>
+      <section>
+        <h1>OUR TEAM</h1>
+      </section>
+      <main>        
         <div id="contain-1">
-          <img src="archivos/imagenes/balon2.jpg" alt="image" />
+          <img src="archivos/imagenes/marketing2.jpg" alt="image" />
           <div class="contain-text">
             <h1>INNOV8</h1>
             <p>
@@ -151,13 +155,13 @@
         </div>
         <div id="redes">
           <a href="instagram.com"
-            ><img src="archivos/logos_e_iconos/instagram.png" alt="Instagram"
+            ><img src="archivos/logos_e_iconos/instagram2.png" alt="Instagram"
           /></a>
           <a href="facebook.com"
-            ><img src="archivos/logos_e_iconos/facebook.png" alt="Facebook"
+            ><img src="archivos/logos_e_iconos/linkedin2.png" alt="Facebook"
           /></a>
           <a href="whatsapp.com"
-            ><img src="archivos/logos_e_iconos/whatsapp.png" alt="Whatsapp"
+            ><img src="archivos/logos_e_iconos/whatsapp2.png" alt="Whatsapp"
           /></a>
         </div>
       </footer>
