--- a/innov8.html
+++ b/innov8.html
@@ -9,162 +9,192 @@
     <link rel="stylesheet" href="css/innov8/services.css" />
     <link rel="stylesheet" href="css/innov8/footer.css" />
     <link rel="stylesheet" href="css/innov8/general.css" />
-    <link rel="stylesheet" href="css/innov8/section.css">
+    <link rel="stylesheet" href="css/innov8/section.css" />
+    <link rel="stylesheet" href="css/innov8/contact.css" />
     <!-- <link rel="icon" href="archivos/logos_e_iconos/favicon.ico" /> -->
     <title>Innov8</title>
   </head>
   <body>
-    <body>
-      <header>
-        <div class="static-image">
-            <img src="archivos/imagenes/marketing1.jpg" alt="">
-        </div>
-        <img src="archivos/logos_e_iconos/logoExample.png" alt="logoExample" id="logoExample">
-      </header>
+    <header>
+      <div class="static-image">
+        <img src="archivos/imagenes/marketing1.jpg" alt="" />
+      </div>
+      <img
+        src="archivos/logos_e_iconos/logoExample.png"
+        alt="logoExample"
+        id="logoExample"
+      />
+    </header>
 
-      <section>
-        <h1>OUR TEAM</h1>
-      </section>
-      <main>        
-        <div id="contain-1">
-          <img src="archivos/imagenes/marketing2.jpg" alt="image" />
-          <div class="contain-text">
-            <h1>INNOV8</h1>
-            <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe,
-              provident laboriosam est sed deserunt voluptate vitae temporibus
-              vel mollitia? Dicta porro nemo veniam consequuntur eos asperiores
-              quam fugiat quod aliquam! Lorem ipsum dolor sit amet consectetur,
-              adipisicing elit. Saepe, provident laboriosam est sed deserunt
-              voluptate vitae temporibus vel mollitia? Dicta porro nemo veniam
-              consequuntur eos asperiores quam fugiat quod aliquam! Lorem ipsum
-              dolor sit amet consectetur, adipisicing elit. Saepe, provident
-              laboriosam est sed deserunt voluptate vitae temporibus vel
-              mollitia? Dicta porro nemo veniam consequuntur eos asperiores quam
-              fugiat quod aliquam! Lorem ipsum dolor sit amet consectetur,
-              adipisicing elit. Saepe, provident laboriosam est sed deserunt
-              voluptate vitae temporibus vel mollitia? Dicta porro nemo veniam
-              consequuntur eos asperiores quam fugiat quod aliquam!
-            </p>
-          </div>
+    <section>
+      <h1>OUR TEAM</h1>
+    </section>
+    <main>
+      <div id="contain-1">
+        <img src="archivos/imagenes/marketing2.jpg" alt="image" />
+        <div class="contain-text">
+          <h1>INNOV8</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe,
+            provident laboriosam est sed deserunt voluptate vitae temporibus vel
+            mollitia? Dicta porro nemo veniam consequuntur eos asperiores quam
+            fugiat quod aliquam! Lorem ipsum dolor sit amet consectetur,
+            adipisicing elit. Saepe, provident laboriosam est sed deserunt
+            voluptate vitae temporibus vel mollitia? Dicta porro nemo veniam
+            consequuntur eos asperiores quam fugiat quod aliquam! Lorem ipsum
+            dolor sit amet consectetur, adipisicing elit. Saepe, provident
+            laboriosam est sed deserunt voluptate vitae temporibus vel mollitia?
+            Dicta porro nemo veniam consequuntur eos asperiores quam fugiat quod
+            aliquam! Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+            Saepe, provident laboriosam est sed deserunt voluptate vitae
+            temporibus vel mollitia? Dicta porro nemo veniam consequuntur eos
+            asperiores quam fugiat quod aliquam!
+          </p>
         </div>
-      </main>
+      </div>
+    </main>
 
-      <article>
-        <div class="contain">
-          <div class="info-contain">
-            <div class="icon-title">
-              <img src="archivos/svg/club.svg" alt="icon" />
-              <h1>Asesoría a Clubes</h1>
-            </div>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
-              reprehenderit pariatur, deserunt similique illum facilis, modi hic
-              eveniet doloremque, ratione quibusdam quia corrupti facere
-              consectetur obcaecati possimus. Id, minima molestias.
-            </p>
+    <article>
+      <div class="contain">
+        <div class="info-contain">
+          <div class="icon-title">
+            <img src="archivos/svg/club.svg" alt="icon" />
+            <h1>Asesoría a Clubes</h1>
           </div>
-          <div class="info-contain">
-            <div class="icon-title">
-              <img src="archivos/svg/player.svg" alt="icon" />
-              <h1>Promoción de Jugador</h1>
-            </div>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
-              reprehenderit pariatur, deserunt similique illum facilis, modi hic
-              eveniet doloremque, ratione quibusdam quia corrupti facere
-              consectetur obcaecati possimus. Id, minima molestias.
-            </p>
-          </div>
-          <div class="info-contain">
-            <div class="icon-title">
-              <img src="archivos/svg/help_24-7.svg" alt="icon" />
-              <h1>Apoyo 24/7</h1>
-            </div>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
-              reprehenderit pariatur, deserunt similique illum facilis, modi hic
-              eveniet doloremque, ratione quibusdam quia corrupti facere
-              consectetur obcaecati possimus. Id, minima molestias.
-            </p>
-          </div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
+            reprehenderit pariatur, deserunt similique illum facilis, modi hic
+            eveniet doloremque, ratione quibusdam quia corrupti facere
+            consectetur obcaecati possimus. Id, minima molestias.
+          </p>
         </div>
-        <div class="contain">
-          <div class="info-contain">
-            <div class="icon-title">
-              <img src="archivos/svg/marketing.svg" alt="icon" />
-              <h1>Marketing Deportivo</h1>
-            </div>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
-              reprehenderit pariatur, deserunt similique illum facilis, modi hic
-              eveniet doloremque, ratione quibusdam quia corrupti facere
-              consectetur obcaecati possimus. Id, minima molestias.
-            </p>
+        <div class="info-contain">
+          <div class="icon-title">
+            <img src="archivos/svg/player.svg" alt="icon" />
+            <h1>Promoción de Jugador</h1>
           </div>
-          <div class="info-contain">
-            <div class="icon-title">
-              <img src="archivos/svg/scouting.svg" alt="icon" />
-              <h1>Scouting</h1>
-            </div>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
-              reprehenderit pariatur, deserunt similique illum facilis, modi hic
-              eveniet doloremque, ratione quibusdam quia corrupti facere
-              consectetur obcaecati possimus. Id, minima molestias.
-            </p>
-          </div>
-          <div class="info-contain">
-            <div class="icon-title">
-              <img src="archivos/svg/asistance_legal.svg" alt="icon" />
-              <h1>Asistencia Legal</h1>
-            </div>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
-              reprehenderit pariatur, deserunt similique illum facilis, modi hic
-              eveniet doloremque, ratione quibusdam quia corrupti facere
-              consectetur obcaecati possimus. Id, minima molestias.
-            </p>
-          </div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
+            reprehenderit pariatur, deserunt similique illum facilis, modi hic
+            eveniet doloremque, ratione quibusdam quia corrupti facere
+            consectetur obcaecati possimus. Id, minima molestias.
+          </p>
         </div>
-        <div class="contain">
-          <div class="info-contain">
-            <div class="icon-title">
-              <img src="archivos/svg/search_business.svg" alt="icon" />
-              <h1>Busqueda y Negociacion</h1>
-            </div>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
-              reprehenderit pariatur, deserunt similique illum facilis, modi hic
-              eveniet doloremque, ratione quibusdam quia corrupti facere
-              consectetur obcaecati possimus. Id, minima molestias.
-            </p>
+        <div class="info-contain">
+          <div class="icon-title">
+            <img src="archivos/svg/help_24-7.svg" alt="icon" />
+            <h1>Apoyo 24/7</h1>
           </div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
+            reprehenderit pariatur, deserunt similique illum facilis, modi hic
+            eveniet doloremque, ratione quibusdam quia corrupti facere
+            consectetur obcaecati possimus. Id, minima molestias.
+          </p>
         </div>
-      </article>
+      </div>
+      <div class="contain">
+        <div class="info-contain">
+          <div class="icon-title">
+            <img src="archivos/svg/marketing.svg" alt="icon" />
+            <h1>Marketing Deportivo</h1>
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
+            reprehenderit pariatur, deserunt similique illum facilis, modi hic
+            eveniet doloremque, ratione quibusdam quia corrupti facere
+            consectetur obcaecati possimus. Id, minima molestias.
+          </p>
+        </div>
+        <div class="info-contain">
+          <div class="icon-title">
+            <img src="archivos/svg/scouting.svg" alt="icon" />
+            <h1>Scouting</h1>
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
+            reprehenderit pariatur, deserunt similique illum facilis, modi hic
+            eveniet doloremque, ratione quibusdam quia corrupti facere
+            consectetur obcaecati possimus. Id, minima molestias.
+          </p>
+        </div>
+        <div class="info-contain">
+          <div class="icon-title">
+            <img src="archivos/svg/asistance_legal.svg" alt="icon" />
+            <h1>Asistencia Legal</h1>
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
+            reprehenderit pariatur, deserunt similique illum facilis, modi hic
+            eveniet doloremque, ratione quibusdam quia corrupti facere
+            consectetur obcaecati possimus. Id, minima molestias.
+          </p>
+        </div>
+      </div>
+      <div class="contain">
+        <div class="info-contain">
+          <div class="icon-title">
+            <img src="archivos/svg/search_business.svg" alt="icon" />
+            <h1>Busqueda y Negociacion</h1>
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
+            reprehenderit pariatur, deserunt similique illum facilis, modi hic
+            eveniet doloremque, ratione quibusdam quia corrupti facere
+            consectetur obcaecati possimus. Id, minima molestias.
+          </p>
+        </div>
+      </div>
+    </article>
 
-      <footer>
-        <div class="contain">
-          <p>Innovative Football Management</p>
-          <p>Direccion: CLL 12A #34-56</p>
-          <p>Correo: Example@email.com</p>
+    <div class="section">
+      <div class="content-contact">
+        <h1>CONTACT</h1>
+        <br />
+        <p><img src="archivos/svg/mail.svg" alt="email" /> Example@email.com</p>
+        <br />
+        <p>
+          <img src="archivos/svg/contact_phone.svg" alt="Phone" /> +1 23456789
+        </p>
+      </div>
+      <div class="content-ubi">
+        <h1></h1>
+        <div class="content-img">
+          <img src="archivos/imagenes/colombia.jpg" alt="img-ubi" />
+          <p></p>
         </div>
-        <div class="contain">
-          &copy; Innovative Football Management. All rights reserved.
-          <p>legal informacion</p>
+        <div class="content-img">
+          <img src="archivos/imagenes/dallas.jpg" alt="img-ubi" />
+          <p></p>
         </div>
-        <div id="redes">
-          <a href="instagram.com"
-            ><img src="archivos/logos_e_iconos/instagram2.png" alt="Instagram"
-          /></a>
-          <a href="facebook.com"
-            ><img src="archivos/logos_e_iconos/linkedin2.png" alt="Facebook"
-          /></a>
-          <a href="whatsapp.com"
-            ><img src="archivos/logos_e_iconos/whatsapp2.png" alt="Whatsapp"
-          /></a>
+        <div class="content-img">
+          <img src="archivos/imagenes/miami.jpg" alt="img-ubi" />
+          <p></p>
         </div>
-      </footer>
-    </body>
+      </div>
+    </div>
+
+    <footer>
+      <div class="contain">
+        <p>Innovative Football Management</p>
+        <p>Direccion: CLL 12A #34-56</p>
+        <p>Correo: Example@email.com</p>
+      </div>
+      <div class="contain">
+        &copy; Innovative Football Management. All rights reserved.
+        <p>legal informacion</p>
+      </div>
+      <div id="redes">
+        <a href="instagram.com"
+          ><img src="archivos/logos_e_iconos/instagram2.png" alt="Instagram"
+        /></a>
+        <a href="facebook.com"
+          ><img src="archivos/logos_e_iconos/linkedin2.png" alt="Facebook"
+        /></a>
+        <a href="whatsapp.com"
+          ><img src="archivos/logos_e_iconos/whatsapp2.png" alt="Whatsapp"
+        /></a>
+      </div>
+    </footer>
   </body>
 </html>
