--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <main>
       <div class="image-contain">
-        <img src="archivos/imagenes/instagram1.jpeg" alt="imagen1" />
+        <img src="archivos/imagenes/instagram1.jpg" alt="imagen1" />
         <img src="archivos/imagenes/instagram2.jpg" alt="imagen2" />
       </div>
       <div class="logo-contain">
@@ -24,14 +24,14 @@
             <span></span>
             Descubre IFM</a
           >
-          <a href="">
+          <a href="innov8.html">
             <span></span>
             <span></span>
             <span></span>
             <span></span>
             Explora Innov8</a
           >
-          <a href="">
+          <a href="olimpia.html">
             <span></span>
             <span></span>
             <span></span>
