Se cambiaron los nombres de las carpetas

--- a/IFM.html
+++ b/IFM.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/IFM/footer.css" />
     <link rel="stylesheet" href="css/IFM/section.css" />
     <link rel="stylesheet" href="css/IFM/general.css" />
-    <link rel="icon" href="archivos/logos_e_iconos/favicon.ico" />
+    <link rel="icon" href="archivos/icons/favicon.ico" />
     <script src="js/videos.js"></script>
     <script src="js/time-video.js"></script>
     <title>Innovative Football Management</title>
@@ -20,12 +20,12 @@
     <nav>
       <div id="contain-1">
         <img
-          src="archivos/logos_e_iconos/escudo.png"
+          src="archivos/icons/escudo.png"
           alt="logo"
           id="logonormal"
         />
         <img
-          src="archivos/logos_e_iconos/IFM_Nombre.png"
+          src="archivos/icons/IFM_Nombre.png"
           alt="logo-nombre"
           id="logonombre"
         />
@@ -54,7 +54,7 @@
       </div>
       <div class="contain-img">
         <img
-          src="archivos/logos_e_iconos/IFM_NoStars.png"
+          src="archivos/icons/IFM_NoStars.png"
           alt="Logo Principal"
         />
       </div>
@@ -102,16 +102,16 @@
         </div>
       </div>
       <div id="contain-2">
-        <img src="archivos/imagenes/balon2.jpg" alt="image" />
+        <img src="archivos/images/balon2.jpg" alt="image" />
       </div>
     </main>
 
     <section>
       <div class="container">
-        <img src="archivos/imagenes/Real_Madrid.png" alt="image" />
-        <img src="archivos/imagenes/FC_Barcelona.png" alt="image" />
-        <img src="archivos/imagenes/Manchester_City_FC_badge.png" alt="image" />
-        <img src="archivos/imagenes/Paris_Saint-Germain.png" alt="image" />
+        <img src="archivos/images/Real_Madrid.png" alt="image" />
+        <img src="archivos/images/FC_Barcelona.png" alt="image" />
+        <img src="archivos/images/Manchester_City_FC_badge.png" alt="image" />
+        <img src="archivos/images/Paris_Saint-Germain.png" alt="image" />
       </div>
     </section>
 
@@ -220,13 +220,13 @@
       </div>
       <div id="redes">
         <a href="instagram.com"
-          ><img src="archivos/logos_e_iconos/instagram.png" alt="Instagram"
+          ><img src="archivos/icons/instagram.png" alt="Instagram"
         /></a>
         <a href="facebook.com"
-          ><img src="archivos/logos_e_iconos/facebook.png" alt="Facebook"
+          ><img src="archivos/icons/facebook.png" alt="Facebook"
         /></a>
         <a href="whatsapp.com"
-          ><img src="archivos/logos_e_iconos/whatsapp.png" alt="Whatsapp"
+          ><img src="archivos/icons/whatsapp.png" alt="Whatsapp"
         /></a>
       </div>
     </footer>
