--- a/innov8.html
+++ b/innov8.html
@@ -11,16 +11,16 @@
     <link rel="stylesheet" href="css/innov8/general.css" />
     <link rel="stylesheet" href="css/innov8/section.css" />
     <link rel="stylesheet" href="css/innov8/contact.css" />
-    <!-- <link rel="icon" href="archivos/logos_e_iconos/favicon.ico" /> -->
+    <!-- <link rel="icon" href="archivos/icons/favicon.ico" /> -->
     <title>Innov8</title>
   </head>
   <body>
     <header>
       <div class="static-image">
-        <img src="archivos/imagenes/marketing1.jpg" alt="" />
+        <img src="archivos/images/marketing1.jpg" alt="" />
       </div>
       <img
-        src="archivos/logos_e_iconos/logoExample.png"
+        src="archivos/icons/logoExample.png"
         alt="logoExample"
         id="logoExample"
       />
@@ -31,7 +31,7 @@
     </section>
     <main>
       <div id="contain-1">
-        <img src="archivos/imagenes/marketing2.jpg" alt="image" />
+        <img src="archivos/images/marketing2.jpg" alt="image" />
         <div class="contain-text">
           <h1>INNOV8</h1>
           <p>
@@ -160,15 +160,15 @@
       <div class="content-ubi">
         <h1></h1>
         <div class="content-img">
-          <img src="archivos/imagenes/colombia.jpg" alt="img-ubi" />
+          <img src="archivos/images/colombia.jpg" alt="img-ubi" />
           <p></p>
         </div>
         <div class="content-img">
-          <img src="archivos/imagenes/dallas.jpg" alt="img-ubi" />
+          <img src="archivos/images/dallas.jpg" alt="img-ubi" />
           <p></p>
         </div>
         <div class="content-img">
-          <img src="archivos/imagenes/miami.jpg" alt="img-ubi" />
+          <img src="archivos/images/miami.jpg" alt="img-ubi" />
           <p></p>
         </div>
       </div>
@@ -186,13 +186,13 @@
       </div>
       <div id="redes">
         <a href="instagram.com"
-          ><img src="archivos/logos_e_iconos/instagram2.png" alt="Instagram"
+          ><img src="archivos/icons/instagram2.png" alt="Instagram"
         /></a>
         <a href="facebook.com"
-          ><img src="archivos/logos_e_iconos/linkedin2.png" alt="Facebook"
+          ><img src="archivos/icons/linkedin2.png" alt="Facebook"
         /></a>
         <a href="whatsapp.com"
-          ><img src="archivos/logos_e_iconos/whatsapp2.png" alt="Whatsapp"
+          ><img src="archivos/icons/whatsapp2.png" alt="Whatsapp"
         /></a>
       </div>
     </footer>
