--- a/olimpia.html
+++ b/olimpia.html
@@ -16,10 +16,10 @@
   <body>
     <header>
       <div class="static-image">
-        <img src="archivos/imagenes/workout1.jpg" alt="" />
+        <img src="archivos/images/workout1.jpg" alt="" />
       </div>
       <img
-        src="archivos/logos_e_iconos/logoExample.png"
+        src="archivos/icons/logoExample.png"
         alt="logoExample"
         id="logoExample"
       />
@@ -30,7 +30,7 @@
     </section>
     <main>
       <div id="contain-1">
-        <img src="archivos/imagenes/workout2.jpg" alt="image" />
+        <img src="archivos/images/workout2.jpg" alt="image" />
         <div class="contain-text">
           <h1>INNOV8</h1>
           <p>
@@ -159,15 +159,15 @@
       <div class="content-ubi">
         <h1></h1>
         <div class="content-img">
-          <img src="archivos/imagenes/colombia.jpg" alt="img-ubi" />
+          <img src="archivos/images/colombia.jpg" alt="img-ubi" />
           <p></p>
         </div>
         <div class="content-img">
-          <img src="archivos/imagenes/dallas.jpg" alt="img-ubi" />
+          <img src="archivos/images/dallas.jpg" alt="img-ubi" />
           <p></p>
         </div>
         <div class="content-img">
-          <img src="archivos/imagenes/miami.jpg" alt="img-ubi" />
+          <img src="archivos/images/miami.jpg" alt="img-ubi" />
           <p></p>
         </div>
       </div>
@@ -185,13 +185,13 @@
       </div>
       <div id="redes">
         <a href="instagram.com"
-          ><img src="archivos/logos_e_iconos/instagram2.png" alt="Instagram"
+          ><img src="archivos/icons/instagram2.png" alt="Instagram"
         /></a>
         <a href="facebook.com"
-          ><img src="archivos/logos_e_iconos/linkedin2.png" alt="Facebook"
+          ><img src="archivos/icons/linkedin2.png" alt="Facebook"
         /></a>
         <a href="whatsapp.com"
-          ><img src="archivos/logos_e_iconos/whatsapp2.png" alt="Whatsapp"
+          ><img src="archivos/icons/whatsapp2.png" alt="Whatsapp"
         /></a>
       </div>
     </footer>
