--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
   <body>
     <main>
       <div class="image-contain">
-        <img src="archivos/images/instagram1.jpg" alt="imagen1" />
-        <img src="archivos/images/instagram2.jpg" alt="imagen2" />
+        <img src="assets/images/instagram1.jpg" alt="imagen1" />
+        <img src="assets/images/instagram2.jpg" alt="imagen2" />
       </div>
       <div class="logo-contain">
-        <img src="archivos/icons/ifmlogoia.png" alt="imagen-logo" />
+        <img src="assets/icons/ifmlogoia.png" alt="imagen-logo" />
         <div class="buttoms">
           <a href="IFM.html">
             <span></span>
