--- a/IFM.html
+++ b/IFM.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/IFM/footer.css" />
     <link rel="stylesheet" href="css/IFM/section.css" />
     <link rel="stylesheet" href="css/IFM/general.css" />
-    <link rel="icon" href="archivos/icons/favicon.ico" />
+    <link rel="icon" href="assets/icons/favicon.ico" />
     <script src="js/videos.js"></script>
     <script src="js/time-video.js"></script>
     <title>Innovative Football Management</title>
@@ -19,13 +19,9 @@
   <body>
     <nav>
       <div id="contain-1">
+        <img src="assets/icons/escudo.png" alt="logo" id="logonormal" />
         <img
-          src="archivos/icons/escudo.png"
-          alt="logo"
-          id="logonormal"
-        />
-        <img
-          src="archivos/icons/IFM_Nombre.png"
+          src="assets/icons/IFM_Nombre.png"
           alt="logo-nombre"
           id="logonombre"
         />
@@ -41,22 +37,19 @@
     </nav>
     <header>
       <div class="contain">
-        <video id="video1" src="archivos/videos/gol1.mp4" muted></video>
+        <video id="video1" src="assets/videos/gol1.mp4" muted></video>
       </div>
       <div class="contain">
-        <video id="video2" src="archivos/videos/gol2.mp4" muted></video>
+        <video id="video2" src="assets/videos/gol2.mp4" muted></video>
       </div>
       <div class="contain">
-        <video id="video3" src="archivos/videos/gol3.mp4" muted></video>
+        <video id="video3" src="assets/videos/gol3.mp4" muted></video>
       </div>
       <div class="contain">
-        <video id="video4" src="archivos/videos/gol4.mp4" muted></video>
+        <video id="video4" src="assets/videos/gol4.mp4" muted></video>
       </div>
       <div class="contain-img">
-        <img
-          src="archivos/icons/IFM_NoStars.png"
-          alt="Logo Principal"
-        />
+        <img src="assets/icons/IFM_NoStars.png" alt="Logo Principal" />
       </div>
     </header>
 
@@ -102,16 +95,16 @@
         </div>
       </div>
       <div id="contain-2">
-        <img src="archivos/images/balon2.jpg" alt="image" />
+        <img src="assets/images/balon2.jpg" alt="image" />
       </div>
     </main>
 
     <section>
       <div class="container">
-        <img src="archivos/images/Real_Madrid.png" alt="image" />
-        <img src="archivos/images/FC_Barcelona.png" alt="image" />
-        <img src="archivos/images/Manchester_City_FC_badge.png" alt="image" />
-        <img src="archivos/images/Paris_Saint-Germain.png" alt="image" />
+        <img src="assets/images/Real_Madrid.png" alt="image" />
+        <img src="assets/images/FC_Barcelona.png" alt="image" />
+        <img src="assets/images/Manchester_City_FC_badge.png" alt="image" />
+        <img src="assets/images/Paris_Saint-Germain.png" alt="image" />
       </div>
     </section>
 
@@ -119,7 +112,7 @@
       <div class="contain">
         <div class="info-contain">
           <div class="icon-title">
-            <img src="archivos/svg/club.svg" alt="icon" />
+            <img src="assets/svg/club.svg" alt="icon" />
             <h1>Asesoría a Clubes</h1>
           </div>
           <p>
@@ -131,7 +124,7 @@
         </div>
         <div class="info-contain">
           <div class="icon-title">
-            <img src="archivos/svg/player.svg" alt="icon" />
+            <img src="assets/svg/player.svg" alt="icon" />
             <h1>Promoción de Jugador</h1>
           </div>
           <p>
@@ -143,7 +136,7 @@
         </div>
         <div class="info-contain">
           <div class="icon-title">
-            <img src="archivos/svg/help_24-7.svg" alt="icon" />
+            <img src="assets/svg/help_24-7.svg" alt="icon" />
             <h1>Apoyo 24/7</h1>
           </div>
           <p>
@@ -157,7 +150,7 @@
       <div class="contain">
         <div class="info-contain">
           <div class="icon-title">
-            <img src="archivos/svg/marketing.svg" alt="icon" />
+            <img src="assets/svg/marketing.svg" alt="icon" />
             <h1>Marketing Deportivo</h1>
           </div>
           <p>
@@ -169,7 +162,7 @@
         </div>
         <div class="info-contain">
           <div class="icon-title">
-            <img src="archivos/svg/scouting.svg" alt="icon" />
+            <img src="assets/svg/scouting.svg" alt="icon" />
             <h1>Scouting</h1>
           </div>
           <p>
@@ -181,7 +174,7 @@
         </div>
         <div class="info-contain">
           <div class="icon-title">
-            <img src="archivos/svg/asistance_legal.svg" alt="icon" />
+            <img src="assets/svg/asistance_legal.svg" alt="icon" />
             <h1>Asistencia Legal</h1>
           </div>
           <p>
@@ -195,7 +188,7 @@
       <div class="contain">
         <div class="info-contain">
           <div class="icon-title">
-            <img src="archivos/svg/search_business.svg" alt="icon" />
+            <img src="assets/svg/search_business.svg" alt="icon" />
             <h1>Busqueda y Negociacion</h1>
           </div>
           <p>
@@ -220,13 +213,13 @@
       </div>
       <div id="redes">
         <a href="instagram.com"
-          ><img src="archivos/icons/instagram.png" alt="Instagram"
+          ><img src="assets/icons/instagram.png" alt="Instagram"
         /></a>
         <a href="facebook.com"
-          ><img src="archivos/icons/facebook.png" alt="Facebook"
+          ><img src="assets/icons/facebook.png" alt="Facebook"
         /></a>
         <a href="whatsapp.com"
-          ><img src="archivos/icons/whatsapp.png" alt="Whatsapp"
+          ><img src="assets/icons/whatsapp.png" alt="Whatsapp"
         /></a>
       </div>
     </footer>
